copilot is a slat

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <div class="no-print side-nav">
       <h2>Pro-Draft</h2>
+      <a href="ai-generator.html" class="tab-btn" style="display: block; text-decoration: none; margin-bottom: 10px;">
+        ✨ AI Generator
+      </a>
       <button class="tab-btn active" onclick="openTab(event, 'editor')">
         1. Proposal Editor
       </button>
