--- a/app.html
+++ b/app.html
@@ -37,6 +37,13 @@
       <button class="tab-btn" onclick="openTab(event, 'drafts')">
         4. Saved Drafts
       </button>
+      <a
+        class="tab-btn"
+        href="ai-generator.html"
+        style="display: block; text-decoration: none"
+      >
+        5. AI Generator
+      </a>
       <hr />
       <button
         class="download-btn"
